--- a/src/components/Editor/Components/Download.css
+++ b/src/components/Editor/Components/Download.css
@@ -1,29 +1,20 @@
 .download {
-  align-self: center !important;
-  height: 75% !important;
-  width: 70% !important;
-  left: 17% !important;
-  top: 15% !important;
+  align-self: center ;
+  height: 75% ;
+  width: 70% ;
+  left: 17% ;
+  top: 15% ;
   z-index: 9999999999999999;
-  /* overflow: hidden !important; */
 }
-/* .download-modal-flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  align-self: center !important;
-} */
 
 .modal-image {
   background-color: rgb(252, 252, 252);
   min-width: 10em;
   max-width: 20em;
-  /* min-height: 14em;
-  max-height: 28em; */
   left: 148px;
   top: 128px;
-  margin-top: 3rem !important;
-  margin-bottom: 3rem !important;
+  margin-top: 3rem ;
+  margin-bottom: 3rem ;
   margin: 9.25rem;
 }
 
@@ -51,20 +42,16 @@
 
 .btn-label {
   width: 200px;
-  /* height: 24px; */
-  /* left: 80px; */
-  /* top: 16px; */
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
   font-size: 20px;
-  /* line-height: 120%; */
   color: #000000;
 }
 .btn-flex {
-  display: flex !important;
-  justify-content: flex-start !important;
-  align-items: center !important;
+  display: flex ;
+  justify-content: flex-start ;
+  align-items: center ;
 }
 
 .recomended {
@@ -93,14 +80,10 @@
   color: #000e25;
   font-size: 1em;
   font-weight: 700;
-  /* letter-spacing: 0.2rem; */
   text-align: center;
   outline: none;
   cursor: pointer;
   transition: 0.2s ease-in-out;
-  /* box-shadow: -6px -6px 14px rgb(255 255 255 / 70%),
-   -6px -6px 10px rgb(255 255 255 / 50%), 6px 6px 8px rgb(255 255 255 / 8%),
-    6px 6px 10px rgb(0 0 0 / 15%);*/
 }
 .botton-save:hover {
   box-shadow: -2px -2px 6px rgba(255, 255, 255, 0.6),
@@ -117,53 +100,45 @@
 @media only screen and (max-device-width: 600px) {
   .download-flex {
     display: grid;
-    /* justify-content: center;
-    align-items: center; */
     flex-direction: column;
     flex-wrap: wrap;
-    overflow: hidden !important;
+    overflow: hidden ;
   }
 
   .botton-save {
-    margin-right: 0.5rem !important;
-    padding: 0em 1em !important;
+    margin-right: 0.5rem ;
+    padding: 0em 1em ;
     background: #ffffff;
     border: none;
     border-radius: 9.5rem;
     color: #000e25;
     font-size: 1em;
     font-weight: 700;
-    /* letter-spacing: 0.2rem; */
     text-align: center;
     outline: none;
     cursor: pointer;
     transition: 0.2s ease-in-out;
-    /* box-shadow: -6px -6px 14px rgb(255 255 255 / 70%),
-     -6px -6px 10px rgb(255 255 255 / 50%), 6px 6px 8px rgb(255 255 255 / 8%),
-      6px 6px 10px rgb(0 0 0 / 15%);*/
   }
   .download {
-    align-self: center !important;
-    min-height: 90% !important;
-    max-height: 90% !important;
-    min-width: 90% !important;
-    max-width: 90% !important;
-    left: 5% !important;
-    top: 6% !important;
+    align-self: center ;
+    min-height: 90% ;
+    max-height: 90% ;
+    min-width: 90% ;
+    max-width: 90% ;
+    left: 5% ;
+    top: 6% ;
     z-index: 9999999999999999;
-    overflow: scroll !important;
+    overflow: scroll ;
   }
 
   .modal-image {
-    background-color: rgb(252, 252, 252) !important;
-    min-width: 5em !important;
-    max-width: 10em !important;
-    /* min-height: 14em;
-    max-height: 28em; */
+    background-color: rgb(252, 252, 252) ;
+    min-width: 5em ;
+    max-width: 10em ;
     left: 0;
-    top: 12px !important;
-    margin-top: 0.5rem !important;
-    margin-bottom: 0.5rem !important;
+    top: 12px ;
+    margin-top: 0.5rem ;
+    margin-bottom: 0.5rem ;
     margin: 0rem 5rem;
   }
   .btn-1st {
@@ -180,20 +155,16 @@
 
   .btn-label {
     width: 150px;
-    /* height: 24px; */
-    /* left: 80px; */
-    /* top: 16px; */
     font-family: "Roboto";
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
-    /* line-height: 120%; */
     color: #000000;
   }
   .btn-flex {
-    display: flex !important;
-    justify-content: flex-start !important;
-    align-items: center !important;
+    display: flex ;
+    justify-content: flex-start ;
+    align-items: center ;
   }
   .recomended {
     display: flex;
