--- a/src/components/Editor/Components/MainEditor.Module.css
+++ b/src/components/Editor/Components/MainEditor.Module.css
@@ -1,17 +1,17 @@
-body {
-  background-color: #eaf3ff !important;
-  overflow-y: hidden !important;
+/* body {
+  background-color: #eaf3ff ;
+  overflow-y: hidden ;
 }
 .hide-scoll {
-  overflow-y: hidden !important;
+  overflow-y: hidden ;
 }
 
 .stage {
-  background-color: #eaf3ff !important;
-  display: flex !important;
-  flex-direction: column !important;
-  justify-content: center !important;
-  align-items: center !important;
+  background-color: #eaf3ff ;
+  display: flex ;
+  flex-direction: column ;
+  justify-content: center ;
+  align-items: center ;
   min-width: fit-content;
   max-width: 62vw;
   margin: 0.05rem;
@@ -19,54 +19,32 @@ body {
   padding: 05px;
 }
 body canvas {
-  background-color: rgb(255, 255, 255) !important;
+  background-color: rgb(255, 255, 255) ;
   box-shadow: 0px 10px 10px rgb(0 0 0 / 5%), 0px 15px 64px rgb(0 0 0 / 5%);
-  /* width: 100% !impor
-  height: 100% !important; */
 }
 
 .canvas canvas {
-  /* background: rgb(255, 255, 255) !important; */
-  /* position: absolute; */
-  -webkit-transition: all 0.0001s !important;
-
-  /* width: 42px; */
-  /* height: 595px; */
-  /* left: 6% !important ;  this causes the shift of whole canvas never give in % */
+  -webkit-transition: all 0.0001s ;
   left: 510px;
   top: 216px;
 
-  background: #ffffff !important;
+  background: #ffffff ;
   box-shadow: 0px 10px 10px rgb(0 0 0 / 5%), 0px 15px 64px rgb(0 0 0 / 5%);
 }
-/* .canvas {
-  background-color: #ef4e7b !important;
-  margin: 16px !important;
-} */
 .container {
-  /* min-width: 50em !important;
-  max-width: 60em !important; */
   width: 500px;
   background-color: rgb(235 236 240);
   margin-top: 3%;
-  height: 86vh !important;
 }
 
 .app {
   display: flex;
   flex-direction: column;
-  background-color: rgb(235 236 240) !important;
 }
 
-/* .app > ._5TogBZahcFYUcPwZu5FIZA{
-  max-width: fit-content !important;
-} */
-
 .canvasDiv {
-  min-width: 30vw;
-  max-width: 62vw !important;
-  background-color: rgb(235 236 240) !important;
-  padding: 20px !important;
+  padding: 20px ;
+  width: -webkit-fill-available;
 }
 
 .sideBar {
@@ -78,27 +56,27 @@ body canvas {
 
 @media only screen and (max-device-width: 620px) {
   body {
-    background-color: #eaf3ff !important;
-    overflow: auto !important;
+    background-color: #eaf3ff ;
+    overflow: auto ;
   }
   body .modal-open {
-    overflow-y: hidden !important;
-    margin: -3.5px !important;
-    font-family: var(--bs-font-sans-serif) !important;
-    font-size: 1rem !important;
-    font-weight: 400 !important;
-    line-height: 1.5 !important;
-    color: #212529 !important;
-    background-color: #eaf3ff !important;
-    -webkit-text-size-adjust: 100% !important;
-    -webkit-tap-highlight-color: transparent !important;
+    overflow-y: hidden ;
+    margin: -3.5px ;
+    font-family: var(--bs-font-sans-serif) ;
+    font-size: 1rem ;
+    font-weight: 400 ;
+    line-height: 1.5 ;
+    color: #212529 ;
+    background-color: #eaf3ff ;
+    -webkit-text-size-adjust: 100% ;
+    -webkit-tap-highlight-color: transparent ;
   }
   .stage {
-    background-color: #005dd7 !important;
-    display: flex !important;
-    flex-direction: column !important;
-    justify-content: center !important;
-    align-items: center !important;
+    background-color: #005dd7 ;
+    display: flex ;
+    flex-direction: column ;
+    justify-content: center ;
+    align-items: center ;
     min-width: fit-content;
     max-width: 50vw;
     margin: 1.8rem;
@@ -106,29 +84,23 @@ body canvas {
     padding: 5px;
   }
   .canvasDiv {
-    height: 90vh !important;
-    min-width: 100vw !important;
-    max-width: 64vw !important;
-    background-color: rgb(235 236 240) !important;
-    padding: 20px !important;
+    height: 90vh ;
+    min-width: 100vw ;
+    max-width: 64vw ;
+    padding: 20px ;
   }
   .canvasDiv_flex {
-    display: flex !important;
+    display: flex ;
   }
   .sideBar {
     width: 100%;
   }
-  /* body .konvajs-content canvas {
-    left: 6% !important;
-  } */
   .container {
-    width: 100% !important;
-    background-color: rgb(235 236 240) !important;
-    /* padding-top: 30px !important; */
-    padding-bottom: 30px !important;
+    width: 100% ;
+    padding-bottom: 30px ;
   }
   .row {
-    width: 100vw !important;
+    width: 100vw ;
   }
 }
 
@@ -141,4 +113,4 @@ body canvas {
 @media only screen and (max-device-width: 620px) {
 }
 @media only screen and (max-device-width: 620px) {
-}
+} */
