--- a/src/components/Editor/Components/SideBarContent/SideBarContent.css
+++ b/src/components/Editor/Components/SideBarContent/SideBarContent.css
@@ -1,16 +1,6 @@
 .bg {
-  background-color: black !important;
-  /* height: 100vh; */
   color: white;
-  background-color: #000e25 !important;
-  /* min-height: 92vh; */
-  /* max-height: 92vh; */
-  /* margin-right: 20px !important; */
-  /* display: flex !important; */
-  /* justify-content: center !important; */
-  /* flex-direction: column !important; */
-  padding: 3.8vh 5% 0 5% !important;
-
+  padding: 3.8vh 5% 0 5% ;
   overflow: auto;
   overflow-x: hidden;
   display: flex;
@@ -38,34 +28,21 @@
 }
 
 .bg-template {
-  /* background-color: black !important; */
-  /* height:100vh; */
   color: white;
-  background-color: #000e25 !important;
   min-height: 100vh;
   max-height: 100vh;
-  /* margin-right:20px !important; */
-  /* display: flex !important; */
-  /* justify-content: center !important; */
-  /* flex-direction: column !important; */
-  padding-top: 3.8vh !important;
-  /* overflow: auto;
-    overflow-x: hidden; */
+  padding-top: 3.8vh ;
+  background-color: #ffffff61;
+  border-radius: 0 30px 30px 0;
 }
 
 .import-paper {
   height: 70vh;
-  /* padding: 2.5rem; */
-  /* margin-top: 34rem; */
   overflow-y: scroll;
   display: flex;
-  /* justify-content: space-around; */
   flex-wrap: wrap;
-  /* grid-gap: 3em; */
-  /* grid-gap: 3em; */
   grid-gap: 3em;
   gap: 3em;
-  background-color: #000e25 !important;
   flex-direction: row;
 }
 
@@ -73,56 +50,48 @@
   margin: 1vw;
   width: 25vw;
   height: 5vh;
-  /* position:fixed; */
   z-index: 10;
 }
 .bgfix {
   padding: 2rem;
-  /* background-color: aqua; */
 }
 
 .keyWords {
-  /* margin:10px !important; */
-  width: 28vw !important;
-  min-height: 100px !important;
-  max-height: 2000px !important;
-  background-color: rgb(73, 71, 71) !important;
-  border-radius: 20px !important;
-  border: 3px solid #fff !important;
-  display: flex !important;
+  width: 28vw ;
+  min-height: 100px ;
+  max-height: 2000px ;
+  background-color: rgb(73, 71, 71) ;
+  border-radius: 20px ;
+  border: 3px solid #fff ;
+  display: flex ;
   flex-wrap: wrap;
-  /* justify-content: flex-start !important; */
-  gap: 0.2em !important;
-  /* align-items: center !important; */
-  gap: 1vw !important;
-  /* overflow-x: scroll !important;
-    -webkit-overflow-scrolling: touch !important; */
+  gap: 0.2em ;
+  gap: 1vw ;
 }
 @import url("https://fonts.googleapis.com/css2?family=Oswald&family=PT+Sans:ital,wght@1,700&family=Poppins:wght@700&display=swap");
 .keyWords-item {
-  /* margin:10px !important; */
-  min-width: 7em !important;
-  max-width: 60em !important;
-  min-height: 1em !important;
-  max-height: 10em !important;
-  background-color: rgb(0, 247, 255) !important;
-  border-radius: 12px !important;
-  border: 1px solid rgb(38, 32, 32) !important;
-  color: black !important;
-  text-align: center !important;
-  display: flex !important;
-  justify-content: center !important;
+  min-width: 7em ;
+  max-width: 60em ;
+  min-height: 1em ;
+  max-height: 10em ;
+  background-color: rgb(0, 247, 255) ;
+  border-radius: 12px ;
+  border: 1px solid rgb(38, 32, 32) ;
+  color: black ;
+  text-align: center ;
+  display: flex ;
+  justify-content: center ;
 
-  align-items: center !important;
-  font-family: "Oswald", sans-serif !important;
-  font-family: "Poppins", sans-serif !important;
-  font-family: "PT Sans", sans-serif !important;
-  font-size: 0.8em !important;
-  cursor: pointer !important;
+  align-items: center ;
+  font-family: "Oswald", sans-serif ;
+  font-family: "Poppins", sans-serif ;
+  font-family: "PT Sans", sans-serif ;
+  font-size: 0.8em ;
+  cursor: pointer ;
 }
 
 .keyWords-item:hover {
-  background-color: rgb(8, 202, 209) !important;
+  background-color: rgb(8, 202, 209) ;
 }
 
 .flex {
@@ -133,19 +102,14 @@
 }
 
 .template-flex {
-  /* width: 100%; */
-  /* height: 108vh; */
   padding: 0 2rem;
   height: 100%;
-  /* padding: 0 12%; */
   overflow-y: scroll;
   display: flex;
   flex-wrap: wrap;
-  align-content: flex-start !important;
-  justify-content: center !important;
+  align-content: flex-start ;
+  justify-content: center ;
   flex-direction: row;
-  /* grid-gap: 3rem; */
-  /* grid-gap: 3rem; */
   grid-gap: 1.5rem;
   gap: 1.5rem;
   overflow-y: scroll !;
@@ -153,52 +117,39 @@
 
 .opt-flex {
   display: flex;
-  flex-wrap: wrap;
   align-content: flex-start;
   justify-content: space-around;
-  gap: 3rem;
 }
 
 .opt-text {
-  width: 193px;
-  height: 32px;
   left: 24px;
   top: 16px;
-
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 22px;
+  font-size: 14px;
   line-height: 120%;
-
   color: #919daf;
 }
 .opt-text-selected {
-  width: 193px;
-  height: 32px;
   left: 24px;
   top: 16px;
-
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 22px;
+  font-size: 14px;
   line-height: 120%;
 
   color: #ffffff;
 }
 .opt-text:hover {
-  width: 193px;
-  height: 32px;
   left: 24px;
   top: 16px;
-
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 22px;
+  font-size: 14px;
   line-height: 120%;
-
   color: #ffffff;
   cursor: pointer;
 }
@@ -206,11 +157,7 @@
   width: 200px;
   height: 8px;
   left: 24px;
-  /* top: 48px; */
   margin-top: 5px;
-
-  /* Blue/blue-50 */
-
   background: #eaf3ff;
   border-radius: 20px;
 }
@@ -221,9 +168,6 @@
   left: 279px;
   top: 48px;
   margin-top: 5px;
-
-  /* Blue/blue-50 */
-
   background: #eaf3ff;
   border-radius: 20px;
 }
@@ -237,7 +181,6 @@
   z-index: 1;
   margin-bottom: 1em;
   text-align: center;
-  background-color: #000e25;
 }
 
 .flex {
@@ -255,10 +198,6 @@
   gap: 1rem;
   padding-bottom: 30%;
 }
-/* .shape-flex img {
-  width: 40%;
-} */
-
 .shapeCard-child-div img {
   width: 10vw;
 }
@@ -287,9 +226,6 @@
   top: 236px;
   margin-top: 1em;
   margin-bottom: 1em;
-
-  /* Foundation /Body/body-300 */
-
   background: #5f708a;
   font-size: 1.4vw;
   cursor: pointer;
@@ -317,27 +253,21 @@
   width: 100%;
   height: 38px;
   border: none;
-  /* left: 24px;
-  top: 12px; */
-
   font-family: "Arial";
   font-style: normal;
   font-weight: 400;
   font-size: 32px;
   line-height: 120%;
-
   color: #eaeaea;
-
   flex: none;
   order: 0;
   flex-grow: 0;
   margin: 0px 10px;
   background: #5f708a;
-
   outline: none;
 }
 .subtitle-text input {
-  outline: none !important;
+  outline: none ;
 }
 textarea:focus,
 input:focus {
@@ -359,9 +289,6 @@ input:focus {
   height: 48px;
   left: 36px;
   top: 332px;
-
-  /* Foundation /Body/body-300 */
-
   background: #5f708a;
   cursor: pointer;
 }
@@ -379,13 +306,8 @@ input:focus {
   font-weight: 400;
   font-size: 22px;
   line-height: 120%;
-  /* or 26px */
-
   color: #ffffff;
   background: #5f708a;
-
-  /* Inside auto layout */
-
   flex: none;
   order: 0;
   flex-grow: 0;
@@ -397,9 +319,6 @@ input:focus {
   height: 145px;
   left: 28px;
   top: 26px;
-
-  /* Blue/blue-50 */
-
   background: #eaf3ff;
 }
 
@@ -408,9 +327,6 @@ input:focus {
   height: 145px;
   left: 28px;
   top: 26px;
-
-  /* Blue/blue-50 */
-
   background: #eaf3ff;
   border-radius: 128px;
 }
@@ -462,18 +378,13 @@ input:focus {
 }
 
 .from-device-import-section {
-  width: 436px;
+  width: 250px;
   height: 374px;
   left: 36px;
   top: 252px;
-  /* Gray */
   background: rgba(0, 0, 0, 0.46);
-  /* Blue/blue-100 */
   border: 1px dashed #bfd9ff;
-  /* box-sizing: border-box; */
   border-radius: 12px;
-  margin: 25% 1em 0px 2em;
-
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
@@ -489,13 +400,8 @@ input:focus {
   justify-content: center;
   align-items: center;
   text-align: center;
-  /* padding: 12px 60px;s */
-
   width: 200px;
   height: 50px;
-
-  /* Blue/blue-500 */
-
   background: #3083ff;
   box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.15);
   border-radius: 8px;
@@ -508,10 +414,6 @@ input:focus {
   font-weight: 700;
   font-size: 22px;
   line-height: 120%;
-  /* or 26px */
-
-  /* Blue/blue-50 */
-
   color: #eaf3ff;
 }
 
@@ -521,22 +423,22 @@ input:focus {
 
 @media only screen and (max-device-width: 620px) {
   .rect-shape {
-    width: 100px !important;
-    height: 100px !important;
-    left: 28px !important;
-    top: 26px !important;
-    background: #eaf3ff !important;
+    width: 100px ;
+    height: 100px ;
+    left: 28px ;
+    top: 26px ;
+    background: #eaf3ff ;
   }
   .circle-shape {
-    width: 100px !important;
-    height: 100px !important;
-    left: 28px !important;
-    top: 26px !important;
-    background: #eaf3ff !important;
-    border-radius: 128px !important;
+    width: 100px ;
+    height: 100px ;
+    left: 28px ;
+    top: 26px ;
+    background: #eaf3ff ;
+    border-radius: 128px ;
   }
   .star-img {
-    width: 100px !important;
+    width: 100px ;
   }
   .title-text {
     width: 100%;
