--- a/src/components/Editor/Components/SideBarContent/SideBarContentItem.css
+++ b/src/components/Editor/Components/SideBarContent/SideBarContentItem.css
@@ -1,11 +1,10 @@
 .card {
-  background-color: rgb(255, 255, 255) !important;
+  background-color: rgb(255, 255, 255) ;
   width: 10vw;
   height: 14.4vw;
-  /* margin: clamp(1vw, 2.5vw, 2vw); */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  overflow: hidden !important;
-  background-color: rgb(138, 138, 138) !important;
+  overflow: hidden ;
+  background-color: rgb(138, 138, 138) ;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -25,25 +24,17 @@
   border-radius: 10px;
 }
 .image {
-  /* background-color: rgb(204, 88, 26) !important; */
   min-width: 10vw;
   max-width: 20vw;
   min-height: 14.142vw;
   max-height: 18.248vw;
-  /* margin: clamp(1vw, 2.5vw, 2vw); */
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  /* overflow:auto;    */
 }
 
 .card:hover {
   box-shadow: 0 16px 32px 0 rgba(0, 0, 0, 0.2);
 }
 
-.slide-in-blurred-bottom {
-  /* -webkit-animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.23, 1, 0.32, 1)
-    both;
-  animation: slide-in-blurred-bottom 0.6s cubic-bezier(0.23, 1, 0.32, 1) both; */
-}
 
 @-webkit-keyframes slide-in-blurred-bottom {
   0% {
@@ -88,19 +79,15 @@
 
 @media only screen and (max-device-width: 620px) {
   .image {
-    /* background-color: rgb(204, 88, 26) !important; */
-    width: 100% !important;
-    height: 100% !important;
-    /* margin: clamp(1vw, 2.5vw, 2vw); */
+    width: 100% ;
+    height: 100% ;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    /* overflow:auto;    */
   }
   .card {
-    background-color: rgb(255, 255, 255) !important;
-    width: 15vh !important;
-    height: 22vh !important;
-    /* margin: clamp(1vw, 2.5vw, 2vw); */
+    background-color: rgb(255, 255, 255) ;
+    width: 15vh ;
+    height: 22vh ;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    overflow: hidden !important;
+    overflow: hidden ;
   }
 }
