--- a/src/components/EditorDesign/EditorHome.css
+++ b/src/components/EditorDesign/EditorHome.css
@@ -1,14 +1,9 @@
 .home {
   position: relative;
-  /* width: 100vw; */
-  /* min-height: 1024px; */
   max-height: -moz-fit-content;
   max-height: fit-content;
-  /* overflow-y: scroll; */
   background: #eaf3ff;
 }
-/* .no-decoration {
-} */
 a:link {
   text-decoration: none;
   color: black;
@@ -20,12 +15,11 @@ a:visited {
 }
 
 .body {
-  /* padding-top: 4rem !important; */
-  margin: 0.5rem !important;
-  width: 100vw !important;
-  min-height: 90vh !important;
-  max-height: -moz-fit-content !important;
-  max-height: 100vh !important;
+  margin: 0.5rem ;
+  width: 100vw ;
+  min-height: 90vh ;
+  max-height: -moz-fit-content ;
+  max-height: 100vh ;
   display: flex;
   align-items: flex-start;
   justify-content: center;
@@ -55,16 +49,16 @@ a:visited {
 }
 
 .templateCards {
-  display: flex !important;
+  display: flex ;
   flex-direction: row;
 }
 
 .templatesCard-paper {
   width: 95%;
-  overflow-x: scroll !important;
+  overflow-x: scroll ;
   /* box-sizing: border-box; */
   margin: 2rem 0rem;
-  background-color: transparent !important;
+  background-color: transparent ;
 }
 
 .lower-sec {
@@ -98,7 +92,6 @@ a:visited {
     position: relative;
     width: 100%;
     height: 100vh;
-    /* overflow-y: scroll; */
     background: #eaf3ff;
   }
 }
