--- a/src/components/EditorDesign/EditorTemplates.css
+++ b/src/components/EditorDesign/EditorTemplates.css
@@ -1,16 +1,11 @@
 .select-sec {
   height: 12vh;
   width: 96vw;
-  /* background-color: rgb(134, 208, 208); */
   display: flex;
   justify-content: space-around;
 }
 
 .Cards {
-  /* width: 2rem !important;
-  height: 14rem !important; */
-  /* left: 0px;
-  top: 0px; */
   background: #bfd9ff;
   margin: 1em;
   display: flex;
@@ -25,7 +20,7 @@
 
 .opt-flex {
   display: flex;
-  flex-direction: row !important;
+  flex-direction: row ;
   flex-wrap: wrap;
   align-content: flex-start;
   justify-content: space-around;
@@ -33,63 +28,51 @@
 }
 
 .opt-text {
-  width: 10em;
-  height: 32px;
   left: 24px;
   top: 16px;
 
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 1em;
-  /* line-height: 120%; */
+  font-size: 14px;
 
   color: #979797;
   display: grid;
-  justify-content: center !important;
+  justify-content: center ;
 }
 .opt-text-selected {
-  width: 10em;
-  height: 32px;
   left: 24px;
   top: 16px;
-
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 1em;
+  font-size: 14px;
   line-height: 120%;
 
   color: #000000;
   display: grid;
-  justify-content: center !important;
+  justify-content: center ;
 }
 .opt-text:hover {
-  width: 10em;
-  height: 32px;
   left: 24px;
   top: 16px;
 
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
-  font-size: 1em;
+  font-size: 14px;
   line-height: 120%;
 
   color: #000000;
   cursor: pointer;
   display: grid;
-  justify-content: center !important;
+  justify-content: center ;
 }
 .under-line-1 {
   width: 7em;
   height: 8px;
   left: 24px;
-  /* top: 48px; */
   margin-top: 5px;
-
-  /* Blue/blue-50 */
-
   background: #000000;
   border-radius: 20px;
 }
@@ -100,9 +83,6 @@
   left: 279px;
   top: 48px;
   margin-top: 5px;
-
-  /* Blue/blue-50 */
-
   background: #000000;
   border-radius: 20px;
 }
