--- a/src/components/EditorDesign/NavBar/NavBar.css
+++ b/src/components/EditorDesign/NavBar/NavBar.css
@@ -1,12 +1,9 @@
 .nav {
-  position: unset !important;
-  width: 100vw !important;
-  height: 8vh !important;
-  left: 0px !important;
-  top: 0px !important;
-  background: #1d437d;
-  box-shadow: inset 4px -4px 24px 16px rgba(0, 0, 0, 0.2);
-
+  position: unset ;
+  width: 100vw ;
+  height: 8vh ;
+  left: 0px ;
+  top: 0px ;
   z-index: 9;
   display: flex;
   align-items: center;
@@ -14,11 +11,8 @@
 }
 
 .heading {
-  /* position: absolute; */
   width: 74px;
   height: 32px;
-  /* left: 48vw;
-  top: 1.4vh; */
   font-family: "Roboto";
   font-style: normal;
   font-weight: 700;
@@ -27,9 +21,7 @@
   color: #ffffff;
 }
 .back-png {
-  /* left: 1.5em;
-  top: 1em; */
-  width: 1em !important;
+  width: 1em ;
   margin: 0px 0.5rem;
   display: flex;
   align-items: center;
@@ -41,16 +33,12 @@
 
 @media only screen and (max-device-width: 500px) {
   .back-png {
-    /* left: 1.5em;
-    top: 1em; */
-    width: 0.5em !important;
+    width: 0.5em ;
 
     margin: 0px 0.5rem;
   }
 }
 
 .info-png {
-  /* left: 95vw;
-  top: 0.8em; */
   margin: 0px 0.5rem;
 }
