Update align-items property in MainEditor.scss

--- a/src/components/Editor/Components/MainEditor.scss
+++ b/src/components/Editor/Components/MainEditor.scss
@@ -6,7 +6,7 @@
 .stage123{
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     height: 100%;
     canvas{
         background-color: #ffffff !important;
