Update styles in MainEditor.scss and SideBar.jsx

--- a/src/components/Editor/Components/SideBar/SideBar.scss
+++ b/src/components/Editor/Components/SideBar/SideBar.scss
@@ -26,6 +26,13 @@
 .tempIcon {
   align-self: center ;
   cursor: pointer;
+  width:50px;
+  svg{
+    width:100%;
+  }
+  &.selected svg *{
+    fill:#0080ff;
+}
 }
 .tempIcon svg *{
   fill:#bfd9ff;
