--- a/src/components/Editor/Components/MainEditor.scss
+++ b/src/components/Editor/Components/MainEditor.scss
@@ -4,10 +4,10 @@
 }
 
 .stage123{
-    display: flex;
-    justify-content: center;
-    align-items: start;
-    height: 100%;
+  justify-content: center;
+  align-items: start;
+  height: 96%;
+  width: 100%;
     canvas{
         background-color: #ffffff !important;
     }
@@ -78,7 +78,8 @@ body {
     width: auto;
   }
   .sideBarContent {
-    width: 700px;
+    width: 325px !important;
+    min-width: 325px;
   }
   
   @media only screen and (max-device-width: 620px) {
